style.css
*{
    box-sizing: border-box;
    padding: 0%;
    margin: 0%;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    text-decoration: none;
 } /*applying styles to every element, and removing default padding and margins etc.*/

html *{
    color: aliceblue;
    /* setting default font colour to save lines of code 
}

 body{
    overflow-x:hidden; /*prevent horizontal scrolling*/
 }

 .hero-header{
    width: 100%;
    height: 100%;
    min-height: 100vh;
    background-color: rgb(34, 34, 34);
 }

.wrapper{
    width: 1280px;
    max-width: 95%;
    margin: 0 auto;
    padding: 0 20px;

}
header{padding: 40px 0 30px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
}
.logo{
    display: inline-flex;
    justify-content: center;
    align-items: center;
}
.logo i{
    height: 45px;
    width: 45px;
    background-color: rgb(187, 28, 28);
    border-radius: 50%;
    font-weight: 600;
    font-size: 1.6rem;
    padding: 10px;
    margin-right: 5px;
    cursor: pointer;
    text-align: center;
}
#logo-name{
    font-size: 25px;
    font-weight: 400;
}

nav .togglebtn{
    width: 35px;
    height: 35px;
    position: absolute;
    top: 45px;
    right: 3%;
    z-index: 5;
    cursor: pointer;
    display: none;
    
} /*to open up and see the navbar*/

nav .togglebtn span{
    display: block;
    background-color: rgb(187, 28, 28) ;
    margin: 5px 0px;
    width: 100px;
    height: 3px;
    transition: 0.4s;
    transition-property: transform, opacity;

}
nav .nav-bar{
    list-style-type: none;
}

nav .nav-bar li{
    display: inline-block;
}
nav .nav-bar li a{
    display: inline-block;
    margin-right: 2.5rem;
    font-size: 25px;
}

.wave{
    animation-name: wave-animation;
    animation-duration: 2.5s;
    animation-iteration-count: infinite;
    transform-origin: 70% 70%;
    display: inline-block;
    
}

@keyframes wave-animation {
    0%{
        transform: rotate(0deg);
    }
    10%{
        transform: rotate(14deg);
    }
    20%{
        transform: rotate(-8deg);
    }
    30%{
        transform: rotate(14deg);
    }
    40%{
        transform: rotate(-4deg);
    }
    50%{
        transform: rotate(10deg);
    }
    60%{
        transform: rotate(0deg);
    }
    100%{
        transform: rotate(0deg);
    }
}

.container {
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding-top: 4rem;
}
.container .hero-pic{
    width: 300px;
    height: 300px;
    border-radius: 50%;
    overflow: hidden;
    border: 15px solid #444;
    box-shadow: 5px 7px 25px rgba(0, 0, 0, 0.5);

}
.hero-pic img{
    height: 100%;
    width: 100%;
    transition: 0.5s;
}
.hero-pic img:hover{
    transform: scale(1.3);
}
.hero-text{
    max-width: 500px;
    display: flex;
    flex-direction: column;
    font-size: 14px;
}

.hero-text h4 span{
    font-size: 16px;
    color: rgb(187, 28, 28) ;

}
.hero-text h1{
    color: rgb(187, 28, 28);
    font-size: 3rem;
}



.btn-group{
    margin: 45px 0;
}

.btn-group .btn{
    border-color: aliceblue;
    color: aliceblue;
    background-color: #333;
    padding: 12px 25px;
    margin: 5px 0;
    border-radius: 30px;
    border: 2px solid aliceblue;
}
.btn-group .btn.active{
    border-color: rgb(187, 28, 28);
    margin-right: 7px;
}

.hero-text .social i{
    color: aliceblue;
    font-size: 22px;
    margin-right: 10px;
    transition: 0.5s;
}
.hero-text .social i:hover{
    color: rgb(187, 28, 28);
    transform: rotate(360deg) scale(1.2);
    
}
/*Displaying nav bar for small screen*/
@media(max-width:930px)
{
    nav .togglebtn{
        display: initial;
    }

    .click{
        top: 45px;
    }

    .click span{
        position: absolute;
        margin-top: 12px;
    }

    .click span:first-child{
        transform: rotate(-45deg);
    }
    .click span:nth-child(2){
        opacity: 0;
        margin: 0;
    }
    .click span:last-child{
        transform: rotate(45deg);
        top: 0;
    }
    nav .nav-bar{
        position: absolute;
        top: 110px;
        right: -100%;
        bottom: 0;
        width: 60%;
        height: 100vh;
        background-color: #222;
        z-index: 3;
        box-shadow: 5px 13px 30 px rgba(0, 0, 0, 0.1);
        transition: 0.5s;
        padding: 25px 0px;
    }
    nav .nav-bar li{
        display: block;
        
    }
    nav .nav-bar li a{
        display: block;
        margin-bottom: 15px;
        text-align: center;
    }
    nav .nav-bar.open{
        right: 0;
    }

}
@media(max-width:768px)
{
    .container{
        flex-direction: column;
        padding-top: 2rem;
    }
    .hero-text{
        padding: 40px 0px;
    }
}

